@@ -4430,7 +4430,7 @@ STR_6118    :A gentle roller coaster for people who haven't yet got the courage 
 STR_6119    :A cheap and easy to build roller coaster, but with a limited height
 STR_6120    :{BABYBLUE}New vehicle now available for {STRINGID}:{NEWLINE}{STRINGID}
 STR_6121    :{SMALLFONT}{BLACK}Extends the park's land rights all the way to the edges of the map
-
+STR_6122    :There are not enough roller coasters in this scenario!
 
 #############
 # Scenarios #
