@@ -155,7 +155,7 @@ enum {
     MAP_ELEMENT_FLAG_GHOST = (1 << 4),
     MAP_ELEMENT_FLAG_BROKEN = (1 << 5),
     MAP_ELEMENT_FLAG_BLOCK_BRAKE_CLOSED = (1 << 5),
-    MAP_ELEMENT_FLAG_CANNOT_REMOVE_TRACK = (1 << 6),
+    MAP_ELEMENT_FLAG_INDESTRUCTIBLE_TRACK_PIECE = (1 << 6),
     MAP_ELEMENT_FLAG_LAST_TILE = (1 << 7)
 };
 
